--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\a642196\\.conda\\envs\\tf_env\\python.exe"
+    "python.pythonPath": "C:\\Users\\danie\\.conda\\envs\\tf-env\\python.exe"
 }
