--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,29 +1,36 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Python: AUE",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}/autoencoder.py",
-            "console": "integratedTerminal"
-        },
-        {
-            "name": "Python: ConvAUE",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}/conv-autoencoder.py",
-            "console": "integratedTerminal"
-        }   ,
-             {
-            "name": "Python: gauss",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}/gaussian-distribution.py",
-            "console": "integratedTerminal"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Python: Current File",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "Python: AUE",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/autoencoder.py",
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "Python: ConvAUE",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/conv-autoencoder.py",
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "Python: gauss",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/gaussian-distribution.py",
+      "console": "integratedTerminal"
+    }
+  ]
 }
